<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/decimalButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/cabin"
        android:text="@string/dot"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zeroButton" />

    <Button
        android:id="@+id/clearButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/c"
        android:textColor="@color/design_default_color_error"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eightButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/cabin"
        android:text="@string/_8"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintStart_toEndOf="@+id/sevenButton" />

    <Button
        android:id="@+id/nineButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/cabin"
        android:text="@string/_9"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"
        app:layout_constraintStart_toEndOf="@+id/eightButton" />

    <Button
        android:id="@+id/sevenButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/cabin"
        android:text="@string/_7"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sixButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/cabin"
        android:text="@string/_6"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/threeButton"
        app:layout_constraintStart_toEndOf="@+id/fiveButton" />

    <Button
        android:id="@+id/fiveButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/cabin"
        android:text="@string/_5"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"
        app:layout_constraintStart_toEndOf="@+id/fourButton" />

    <TextView
        android:id="@+id/typeBox"
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:fontFamily="@font/cabin"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/zeroButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/cabin"
        android:text="@string/_0"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clearButton" />

    <Button
        android:id="@+id/byButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/cabin"
        android:text="@string/bs"
        android:textColor="#33691E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/sevenButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/timesButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/cabin"
        android:text="@string/ast"
        android:textColor="#33691E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/eightButton"
        app:layout_constraintStart_toEndOf="@+id/byButton" />

    <Button
        android:id="@+id/minusButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/cabin"
        android:text="@string/minus"
        android:textColor="#33691E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/plusButton"
        app:layout_constraintStart_toEndOf="@+id/nineButton" />

    <Button
        android:id="@+id/plusButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/cabin"
        android:text="@string/plus"
        android:textColor="#33691E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/equalButton"
        app:layout_constraintStart_toEndOf="@+id/sixButton" />

    <Button
        android:id="@+id/equalButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="185sp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/cabin"
        android:text="@string/equal"
        android:textAlignment="center"
        android:textColor="#33691E"
        android:textSize="30sp"
        app:iconTint="@color/material_dynamic_neutral20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/threeButton" />

    <Button
        android:id="@+id/backSpaceButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="185sp"
        android:layout_height="90sp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/cabin"
        android:text="@string/backSpace"
        android:textColor="#33691E"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nineButton"
        app:layout_constraintStart_toEndOf="@+id/timesButton" />

    <Button
        android:id="@+id/twoButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/cabin"
        android:text="@string/_2"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintStart_toEndOf="@+id/oneButton" />

    <Button
        android:id="@+id/oneButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/cabin"
        android:text="@string/_1"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fourButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/cabin"
        android:text="@string/_4"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/oneButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/threeButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/cabin"
        android:text="@string/_3"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/decimalButton"
        app:layout_constraintStart_toEndOf="@+id/twoButton" />

    <TextView
        android:id="@+id/bufferBox"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeBox" />

</androidx.constraintlayout.widget.ConstraintLayout>